@@ -9,6 +9,7 @@ Revision history for Test::PDL
  - tolerances now applied to integers
  - fails now give a count of how many values didn't match
  - two differently-shaped empties are now not equal
+ - in list context, eq_pdl now also returns approx_artol mask
 
 0.20      2022-02-26
 
